correcting color contrast in footer

--- a/frontend/styles/catalog.css
+++ b/frontend/styles/catalog.css
@@ -442,6 +442,7 @@
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 5%;
+    color: #ffffff;
   }
   footer .footerSocialMedia {
     width: 50%;
@@ -786,8 +787,11 @@
     background-color: #205e69;
     color: #ffffff;
   }
-  footer a {
+  footer p, footer a {
     color: white;
+  }
+  footer p {
+    padding: 5%;
   }
   footer #footerLayout {
     display: -webkit-box;
