--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -413,6 +413,7 @@
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 5%;
+    color: #ffffff;
   }
   footer .footerSocialMedia {
     width: 50%;
@@ -757,8 +758,11 @@
     background-color: #205e69;
     color: #ffffff;
   }
-  footer a {
+  footer p, footer a {
     color: white;
+  }
+  footer p {
+    padding: 5%;
   }
   footer #footerLayout {
     display: -webkit-box;
