--- a/frontend/styles/mixins.scss
+++ b/frontend/styles/mixins.scss
@@ -318,8 +318,7 @@
             border: none;
             display: flex;
             flex-direction: row;
-            // justify-self: flex-start;
-            // width: 60px;
+
             padding: 0%;
             img{
               height: 26px;
@@ -378,8 +377,6 @@
         }
       }
     }
-    // #cartLayout{
-    //   // background-color: red;
     }
 
     .grid{
@@ -478,8 +475,11 @@
     margin-bottom: -1%;
     background-color: #205e69;
     color: #ffffff;
-    a {
+    p, a {
       color: white;
+    }
+    p{
+      padding: 5%;
     }
     #footerLayout{
       display: flex;
@@ -594,6 +594,7 @@
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 5%;
+    color: #ffffff;
   }
   .footerSocialMedia{
     width: 50%;
